# research_assistant

./: .env.example  .tool-versions  README.md  alembic.ini  main.py  pyproject.toml
.cursor/rules/: always.mdc
alembic/: env.py
alembic/versions/: 20250222_033951_0456604eef66_initial_migration.py  20250222_034311_796c4a6aabcb_create_papers_and_authors_tables.py
api/: papers.py
data/: dl4h_papers.csv
research_assistant/: __init__.py  find_missing_papers.py  import_papers.py  main.py  models.py  paper_search.py  rerun_failed_papers.py  search.py  search_example.py
research_assistant/db/: config.py  models.py  service.py
tests/: test_main.py  test_paper_search.py
tests/api/: test_papers.py
