[tool.poetry]
name = "research_assistant"
version = "0.1.0"
description = "A research assistant project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
semanticscholar = "^0.5.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
httpx = "^0.28.1"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 